* Break Administrator: remove dead code.
* CallCenter Config, Agent Console, Agents, Break Administrator, Calls Detail, Calls per Agent, Calls per Hour, Campaign Out: Use methods load_language_module and _tr from Elastix framework. Define them if they do not exist.
* Campaigns: improve speed and memory usage of CSV download of completed 
  campaign data by replacing single big SQL query by multiple smaller ones.
  Fixes Elastix bug #600. 
* Agents, Break Administrator, Calls Detail, Calls per Agent, Calls per Hour, Campaign Out: make module aware of url parameter in paloSantoGrid::fetchGrid().
* Agents, Break Administrator, Calls per Agent, Calls per Hour, Campaign Out: remove <form> tags from the filter HTML template. They are not required, since the template already includes a proper <form> tag enclosing the grid.
* Agent Console (programar_llamadas): restrict call reprogramming interface to
  requests with a valid Elastix session and authorization to the Agent Console.  
  Also, clean up form code to use the default Elastix support for date controls.  
* Form List: fix breakage from i18n unification and remove useless code
* Agent Console: move around conditional declaration of getParameter so that
  it is available at the moment it is required.
* Dialer: Found probable cause of unexpected delays in outgoing calls. Asterisk
  AMI may emit events at any arbitrary frequency. If AMI manages to continuosly 
  emit events with less than 1 second delay, the event loop in the dialer will
  get stuck processing events (even if not interesting) and never dispatch any
  new calls. Fixed by forcing end of event receipt inside wait_response() method 
  in phpagi-asmanager-elastix.php. Might fix Elastix bugs #543, #577.
* Web interface: cleanup of i18n files to bring them in line with the rest of 
  the Elastix code.

1.5-3.7 (SVN revision 1843)
* Dialer: Add debug notification when record has just been inserted in 