@@ -1,3 +1,4 @@
+* Dialer (phpagi-asmanager): fix broken database_get method
 * Break Administrator: remove dead code.
 * CallCenter Config, Agent Console, Agents, Break Administrator, Calls Detail, Calls per Agent, Calls per Hour, Campaign Out: Use methods load_language_module and _tr from Elastix framework. Define them if they do not exist.
 * Campaigns: improve speed and memory usage of CSV download of completed 
